$Id$

2018-03-07  Douglas Gilbert  <dgilbert@interlog.com>

	smartd.cpp:
	- continue to use READ CAPACITY(10) first on unseen
	  SCSI devices but once we discover the need for
	  READ CAPACITY(16) use it for subsequent accesses
	dev_interface.h: 
	- struct scsi_device: add set_rcap16_first() and
	  use_rcap16() const methods
	scsicmds.cpp:
	- use scsi_device::set_rcap16_first() when READ
	  CAPACITY(10) reports 32 bits can't represent the
	  number of blocks

2018-03-06  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: 
	- add Transcend PSD SSD family (#979)
	- add Toshiba HK4R Series SSD (#898)
	- extend Western Digital Re regexp (#896)
	- extend Wester Digital Se regexp (#953)
	- add Smartbuy ignition plus (#976)

2018-03-05  Gabriele Pohl <contact@dipohl.de>

	drivedb.h:
	- Add Seagate IronWolf 12TB ST12000VN0007-2GS116 (#988)

2018-03-05  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: add Seagate Barracuda Pro family (#981)

2018-03-01  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: Fix build under -CURRENT (patch by cy@)

2018-02-28  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Add SanDisk SDSSDH2128G (#982)

2018-02-27  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- extend PLEXTOR PX regexp (#934)
	- add Seagate Enterprise NAS HDD family (#946)
	- add SanDisk SDSA6MM-* family (#965)
	- fix Seagate Laptop HDD regexp (#955)
	- add Seagate Barracuda Compute series (#927)
	- extend Seagate Enterprise Capacity 3.5 HDD regexp (#956)

2018-02-26  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- add Seagate XF1230 SSD (GH: issues/4)
	- add Intel SSD Pro 5400s Series (GH: pull/5)
	- add SanDisk-SD8SN8U-256G-1006 (GH: pull/3)
	- add Toshiba Q300 SSD series (#932)
	- extend HGST Deskstar NAS regexp (#975)
	- add KINGSTON SNS4151S316GD SSD (#902)

2018-02-20  Christian Franke  <franke@computer.org>

	os_netbsd.cpp: Apply patch-os_netbsd.cpp 1.1 (2017-12-15) from
	pkgsrc.se/sysutils/smartmontools: Add missing <sys/stat.h>.
