@@ -1,5 +1,11 @@
 $Id$
 
+2018-03-20  Christian Franke  <franke@computer.org>
+
+	json.cpp, json.h: Add support for 64 and 128 bit unsigned
+	integers.  Add 'set_unsafe_*()' member functions to print unsigned
+	integers >= 53 bit as JSON number and string.
+
 2018-03-07  Douglas Gilbert  <dgilbert@interlog.com>
 
 	smartd.cpp:
